--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,6 +54,10 @@
             <li>
               <a href="http://github.com/yogiramchandani" class="icon-github" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar Github']);" title="Ia! Ia! Cthulhu Fhtagn!"></a>
             </li>
+			
+            <li>
+              <a href="http://www.linkedin.com/pub/yogi-ramchandani/0/5a7/662" class="icon-linkedin" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar LinkedIn']);" title="LinkedIn"></a>
+            </li>
 
             <li>
               <a href="http://feeds.feedburner.com/yogiramchandani" class="icon-rss" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar RSS']);" title="RSS"></a>
