--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,10 @@
     <div class="container">	
       <div id='mobile' class='two columns hidden'>
         <ul>
-          <li><a href='/'>Yogi</a></li>
-          <li><span class="gray">Yogi Ramchandani</span></li>
-          <li><a href="mailto:yogiramchandani@gmail.com" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Mobile', 'Sidebar Email']);">yogiramchandani@gmail.com</a></li>
-          <li><a href="http://twitter.com/yogiramchandani" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Mobile', Sidebar Email']);">@yogiramchandani</a></li>
+          <li><a href='/'><span class="gray">Yogi Ramchandani</span></a></li>
+          <li><a href="mailto:yogiramchandani@gmail.com" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Mobile', 'Sidebar Email']);">Mail</a></li>
+          <li><a href="http://twitter.com/yogiramchandani" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Twitter', Sidebar Twitter']);">Twitter</a></li>
+          <li><a href="http://www.linkedin.com/pub/yogi-ramchandani/0/5a7/662" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Twitter', Sidebar LinkedIn']);">LinkedIn</a></li>
         </ul>
       </div>
 
