--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' rel='stylesheet' type='text/css'>
     <link href="http://feeds.feedburner.com/yogiramchandani" rel="alternate" title="Yogi" type="application/atom+xml" /> 
-    <link rel="shortcut icon" href="/static/images/favicon.png" />
+    <link rel="shortcut icon" href="/static/images/yogi.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
 
