updated atom feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
             </li>
 
             <li>
-              <a href="http://feeds.feedburner.com/yogiramchandani" class="icon-rss" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar RSS']);" title="RSS"></a>
+              <a href="http://yogiramchandani.com/atom.xml" class="icon-rss" onClick="_gaq.push(['_trackEvent', 'Link', 'Click', 'Sidebar RSS']);" title="RSS"></a>
             </li>
           </ul>
           <ul id="me">
